added a bannar style

--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <header>
-        <div class="bannar-container">
+    <header class="bannar-container">
             <div class="image-text">
-                <h3>Happy New Year</h3>
-                <h1>New Year Party Celebration</h1>
+                <p>Happy New Year</p>
+                <h1>New Year Party<br>Celebration</h1>
             </div>
-            <div class="bannar-image">
-                <img src="./images/Banner Image.png" alt="">
-            </div>
-        </div>
     </header>
 </body>
 </html>
