--- a/index.html
+++ b/index.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year celebration gift card</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
     <header class="bannar-container">
-            <div class="image-text">
-                <p>Happy New Year</p>
-                <h1>New Year Party<br>Celebration</h1>
-            </div>
+        <div class="image-text">
+            <p>Happy New Year</p>
+            <h1>New Year Party<br>Celebration</h1>
+        </div>
     </header>
+    <main>
+        <section>
+            <div class="offer-container">
+                <div class="offer">
+                    <h1>65% OFF</h1>
+                    <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                    <h4>ALL CATEGORIES</h4>
+                </div>
+                <div class="image">
+                    <img src="./images/New Year Photo.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="image-bannar">
+            <div class="leftsite-content">
+                <h1>Welcome to <br> midnight party</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                <input class="btn" type="button" value="Join Now">
+            </div>
+            <div class="rightsite-content">
+                <img src="./images/Group 70.png" alt="">
+            </div>
+
+        </section>
+
+    </main>
 </body>
+
 </html>
